# SlintUI

./: AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO.md
apps/gallery/: Cargo.toml  build.rs
apps/gallery/src/: main.rs
apps/gallery/ui/: component-detail.slint  gallery-i18n.slint  gallery-navigation.slint  gallery.slint  p1-interaction-harness.slint
crates/slint-ui/: Cargo.toml
crates/slint-ui/src/: lib.rs
crates/slint-ui/ui/: index.slint
design/: accessibility.md  component-inventory.md  component-quality-audit.md  content-and-localization.md  contrast-audit.md  foundations.md  gallery-information-architecture.md  interaction.md
design/component-specs/: README.md  alert.md  app-shell.md  auto-complete.md  avatar.md  badge.md  breadcrumb.md  button-group.md  button.md  calendar.md  card.md  checkbox-group.md  checkbox.md  collapse.md  color-picker.md  combo-box.md  command-palette.md  confirm-dialog.md  context-menu.md  data-grid.md  date-picker.md  description-list.md  divider.md  drawer.md  dropdown.md  empty-state.md  file-picker.md  flex.md  focus-ring.md  form-row.md  form.md  grid.md  icon-button.md  icon.md  image-view.md  label.md  link.md  list.md  loading-overlay.md  modal-dialog.md  (+47 more)
design/component-specs/data-display/: avatar.md  badge.md  calendar.md  card.md  collapse.md  data-grid.md  list.md  (+11 more)
docs/: getting-started.md  iconography.md  p0-status.md  p1-status.md  p2-status.md  theming.md
docs/component-api/: README.md
tests/: README.md
tests/screenshots/: manifest.json
tools/icons/: import-ant-design-icons.mjs
(+857 files in other folders)
