[workspace]
members = [
    "apps/gallery",
    "crates/slint-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/dripai/SlintUI"
homepage = "https://github.com/dripai/SlintUI"

[workspace.dependencies]
slint = "=1.17.1"
slint-build = "=1.17.1"

